# pnsqc_quality_jam_demo

./: .gitignore  HybridPOMLFM.pptx  Makefile  README.md  example_tests.py  integration_example.py  interactive_models.py  pyproject.toml
framework/pages/: practice_form.py  practice_form_standard_pom.py
framework/wrappers/: checkable.py  custom_select_element.py  multi_value_item.py
selenium_essentials/core/extensions/: extended_web_driver.py  extended_web_element.py
selenium_essentials/core/helpers/: driver_helper.py  general_helpers.py
selenium_essentials/objects/bases/: base_page.py
