[tool.poetry]
name = "selenium-pom-lfm"
version = "0.0.1"
description = ""
authors = ["Sophia McKeever"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "4.9.0"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
coverage = "^7.4.0"
selenium-driver-updater = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
